# conductor

./: .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml
backend/: .env.example  alembic.ini  config.py  database.py  main.py  pyproject.toml  storage.py
backend/auth/: dependencies.py  security.py
backend/core/: workflow_generator.py
backend/core/agents/: runner.py
backend/core/agents/builtin/: classifier.py  decision_maker.py  draft_writer.py  extractor.py  risk_scorer.py  validator.py
backend/core/contracts/: agent.py  errors.py  run.py  tool.py  workflow.py
backend/core/engine/: agent_selector.py  checkpoint.py  orchestrator.py  step_verifier.py
backend/core/guardrails/: pipeline.py
backend/core/providers/: anthropic.py  base.py  key_store.py  model_fetcher.py  model_router.py  openai.py
backend/core/tools/: executor.py
backend/migrations/: 001_init.sql  002_agent_crud.sql  003_fix_workflows.sql  004_v2_schema.sql  005_roles.sql  006_project_scope.sql  007_connections.sql
backend/migrations_alembic/: env.py
backend/models/: __init__.py  tables.py
backend/routes/: agents.py  approvals.py  auth.py  builders.py  chat.py  connections.py  conversations.py  files.py  knowledge_bases.py  llm_providers.py  projects.py  runs.py  tools.py  triggers.py  workflows.py
backend/templates/: claims_processing.json  workflow_library.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentChatHelper.tsx  AppShell.tsx  BuilderChat.tsx  Header.tsx  KnowledgePicker.tsx  (+2 more)
(+29 files in other folders)
